# moonxi-net

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  moon.work
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  stable-check.yml
experiments/: bench_cifar10.py  cifar10_common.py  optim-arch-comparison.md  plot_comparison.py  profile_cifar10.py  pyproject.toml  pytorch_mnist_mlp.py  tagless-final-refactor.md  train_cifar10.py
moonxi-net/: README.md  errors.mbt  moon.mod.json  pkg.generated.mbti  shape_tensor.mbt  shape_tensor_wbtest.mbt  trait.mbt
moonxi-net-gpu/: README.md  moon.mod.json  pkg.generated.mbti
moonxi-net-gpu/cuda/: cuda.mbt  cuda_kernels.cu  cuda_stub.c  ffi.mbt  gpu_context.mbt  moon.pkg  pkg.generated.mbti  types.mbt
moonxi-net-gpu/event_tensor/: event_tensor.mbt  moon.pkg  pkg.generated.mbti
moonxi-net-gpu/tensor/: activation.mbt  add.mbt  batchnorm.mbt  conv2d.mbt  gpu_tensor.mbt  linear.mbt  moon.pkg  optim_step.mbt  optimizer.mbt  pkg.generated.mbti  pool.mbt  softmax.mbt  trait_impl.mbt
moonxi-net-gpu/train/: moon.pkg  pkg.generated.mbti  run.mbt
moonxi-net/dataloader/: data_loader.mbt  dataloader_wbtest.mbt  moon.pkg  pkg.generated.mbti
moonxi-net/grad/: blas.mbt  grad.mbt  grad_wbtest.mbt  image.mbt  moon.pkg  pkg.generated.mbti
moonxi-net/loss/: loss.mbt  loss_wbtest.mbt  moon.pkg  pkg.generated.mbti
moonxi-net/model/: mlp.mbt  (+6 more)
scripts/: download_cifar10.sh  download_mnist.sh  run_cifar10_training.sh  run_mnist_training.sh
(+55 files in other folders)
